5.1.7 -> 5.1.8:
    - jbj: handle "config(N) = E:V-R" within rpmns.c (but treat as a string).
    - jbj: yaml: backport the YAML analogue tag extensions to repo-md XML.
    - jbj: yaml: permit --without-syck, add some mac os x AutoFu/gcc fiddle-ups.
    - jbj: yaml: add lsyck lua module to parse YAML.
    - jbj: finish backport and enable SUPPORT_DEBUGINFO_UPGRADE_MODEL.
    - jbj: misc: get rid of splitFoo prototypes, bury the last use in rpmfi.c.
    - jbj: PCRE in -lrpmmisc, LUA in -lrpmio linking -lrpmmisc, instead.
    - jbj: update file manifests with backported files.
    - jbj: perl: fix: no need to include stringbuf.h any more.
    - jbj: fix: --noscripts/--nofdigests/--nocontexts need to use popt callback.
    - jbj: rpmiob: fix: return iob to _rpmiobPool instead.
    - rse: add RPM Lua function rpm.hostname()
    - jbj: yarn: convert mire to usage mutex with refcounts
	(unifying array <-> element mutexes by copying use/pool
	pointers throughout the array).
    - jbj: rpmku: rework rpmiob handling to avoid extra malloc's.
    - jbj: rpmiob: fix: add a newref in rpmiobNew.
    - jbj: rpmiob: backport the rpmiob interface into rpmku too.
    - jbj: rpmiob: backport the remainder of rpmiob, eliminate StringBuf.
    - jbj: backport HAVE_PTHREADS_H -> WITH_PTHREADS AutoFu logic.
    - jbj: more hack-o-rounds for LUA <-> PCRE, add --disable-static for now.
    - jbj: backport rpmiotypes.h/rpmiob.c, use rpmiobSlurp instead.
    - jbj: fix: handle ./../foo paths correctly (#491388).
    - jbj: rpmlib: rescusitate splint annotations.
    - jbj: rpmdb: rescusitate splint annotations.
    - jbj: rpmtsOrder: fully enable parentdir deps when ordering.
    - jbj: rpmtsOrder: enable parentdir/linkto ordering relations.
    - jbj: initialize ts->PRCO lazily (measured 20.4% rpm -qa speedup ymmv).
    - jbj: EVRtuple: fix: dig out the one time mire allocation leak.
    - jbj: use rpmioFreePoolItem for rpmds, eliminate rpmdsFree.