@@ -94,7 +94,7 @@ rpmsx rpmsxUnlink (/*@killref@*/ /*@only@*/ /*@null@*/ rpmsx sx,
 		/*@null@*/ const char * msg)
 	/*@modifies sx @*/;
 #define	rpmsxUnlink(_sx, _msg)	\
-	((rpmsx)rpmioUnlinkPoolItem((rpmioItem)(_sx), _msg, __FILE__, __LINE__))
+    ((rpmsx)rpmioUnlinkPoolItem((rpmioItem)(_sx), _msg, __FILE__, __LINE__))
 
 /**
  * Reference a security context patterns instance.
@@ -106,7 +106,7 @@ rpmsx rpmsxUnlink (/*@killref@*/ /*@only@*/ /*@null@*/ rpmsx sx,
 rpmsx rpmsxLink (/*@null@*/ rpmsx sx, /*@null@*/ const char * msg)
 	/*@modifies sx @*/;
 #define	rpmsxLink(_sx, _msg)	\
-	((rpmsx)rpmioLinkPoolItem((rpmioItem)(_sx), _msg, __FILE__, __LINE__))
+    ((rpmsx)rpmioLinkPoolItem((rpmioItem)(_sx), _msg, __FILE__, __LINE__))
 
 /**
  * Destroy a security context patterns.
