@@ -1,4 +1,5 @@
 5.1.7 -> 5.1.8:
+    - jbj: eliminate rpmal debugging code.
     - jbj: handle "config(N) = E:V-R" within rpmns.c (but treat as a string).
     - jbj: yaml: backport the YAML analogue tag extensions to repo-md XML.
     - jbj: yaml: permit --without-syck, add some mac os x AutoFu/gcc fiddle-ups.
